Debugged it to place the main div in center.

--- a/todo.html
+++ b/todo.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Todo List</title>
-    <link rel="stylesheet" href="styles/12-todo-list.css">
+    <link rel="stylesheet" href="todo.css">
   </head>
   <body>
+    <div class="center">
     <p>Todo List</p>
 
     <div class="todo-input-grid">
@@ -16,7 +17,8 @@
     </div>
 
     <div class="js-todo-list todo-grid"></div>
+    </div>
 
-    <script src="scripts/12-todo-list.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
